--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,5 +17,13 @@
             </intent-filter>
         </activity>
         <activity android:name=".activities.MainActivity" />
+
+        <receiver android:name=".widgets.CounterWidgetProvider" >
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+            <meta-data android:name="android.appwidget.provider"
+                android:resource="@xml/widget_provider_counter" />
+        </receiver>
     </application>
 </manifest>
