--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,5 +25,8 @@
             <meta-data android:name="android.appwidget.provider"
                 android:resource="@xml/widget_provider_counter" />
         </receiver>
+
+        <meta-data android:name="android.app.searchable"
+            android:resource="@xml/searchable_beverages" />
     </application>
 </manifest>
