--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Cheers.Default">
-        <activity android:name=".activities.SplashActivity" android:theme="@style/Theme.Cheers.SplashTheme">
+        <activity android:name=".activities.SplashActivity"
+            android:theme="@style/Theme.Cheers.SplashTheme"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
